# hammer

./: .gitignore  CMakeLists.txt  License.txt  Makefile  README.md  build_debug.sh  main.c  meson.build  run_tests.sh  tests_main.c
cmd/: meson.build
cmd/test/: allocators.c  arrays.c  common.h  environment.c  errors.c  hashes.c  hashmaps.c  main.c  math.c  meson.build  modules.c  mutexes.c  queues.c  random.c  readers.c  signatures.c  stringbuilders.c  strings.c  tests.h  threads.c  utils.c  waitableevents.c  waitobjects.c  workers.c
cmd/test/data/: modules.hma
cmd/tests/: common.h  main.c  meson.build  tests.h
cmd/tests/collections/: arrays.c  hashmaps.c  meson.build  queues.c
cmd/tests/core/: allocators.c  environment.c  errors.c  hashes.c  math.c  meson.build  random.c  stringbuilders.c  stringpools.c  strings.c  utils.c
cmd/tests/io/: linereaders.c  meson.build  readers.c  writers.c
cmd/tests/net/: meson.build  sockets.c
cmd/tests/net/http/: httprequests.c  meson.build
cmd/tests/net/sockets/: meson.build  sockets.c
cmd/tests/runtime/: meson.build  modules.c  signatures.c
cmd/tests/threading/: meson.build  mutexes.c  processes.c  threads.c  waitableevents.c  workers.c
doc/: conventions.md  ideas.md
pkg/: meson.build
pkg/collections/: array.c  array.h  common.h  hashmap.c  hashmap.h  meson.build  queue.c  queue.h
pkg/core/: allocator.c  allocator.h  common.h  environment.h  error.c  hash.c  hash.h  math.c  math.h  meson.build  primitives.c  primitives.h  random.c  random.h  string.c  string.h  stringbuilder.c  stringbuilder.h  stringpool.c  stringpool.h  utf8.c  utf8.h  utils.c  utils.h
pkg/io/: linereader.c  linereader.h  meson.build  reader.c  reader.h  writer.c  writer.h
pkg/net/: meson.build  serversocket.h  socket.c  socket.h
pkg/net/http/: common.h  httprequest.c  httprequest.h  meson.build
pkg/net/sockets/: meson.build  serversocket.h  socket.c  socket.h
pkg/platform/: meson.build
pkg/platform/unix/: array.c  common.c  common.h  environment.c  meson.build  mutex.c  process.c  random.c  serversocket.c  socket.c  socket.h  string.c  thread.c  waitableevent.c  waitobject.c
pkg/runtime/: class.c  class.h  common.h  executor.h  image.c  image.h  meson.build  metadata.c  metadata.h  method.c  method.h  module.c  module.h  moduleregistry.c  moduleregistry.h  opcode.h  signature.c  signature.h  type.h  worker.c  worker.h
pkg/threading/: atomic.h  meson.build  mutex.h  process.h  thread.h  waitableevent.h  waitobject.h  worker.c  worker.h  workerpool.c  workerpool.h
scripts/: check.sh  clean.sh  make-check.sh  make-impl.sh  make-run-test.sh  make-run-tests.sh  make.sh  run-test.sh  run-tests.sh  setup.sh
src/: CMakeLists.txt  allocator.c  allocator.h  array.c  array.h  class.h  common.h  error.c  executor.h  hash.c  hash.h  hashmap.c  hashmap.h  module.c  module.h  opcode.h  primitives.c  primitives.h  reader.c  reader.h  string.c  string.h  type.h  utils.c  utils.h
tests/: CMakeLists.txt  allocator.c  allocators.c  arrays.c  common.h  hashes.c  (+7 more)
(+4 files in other folders)
